fix: corrigindo z-index da navbar

--- a/css/navbar/menu_mobile.css
+++ b/css/navbar/menu_mobile.css
@@ -15,6 +15,8 @@
     padding-top: 14px;
     height: 100%;
     width: 0%;
+    right: 0;
+    z-index: 15;
   }
 
   .menu-mobile__item {
